# vulkan-renderer

./: .gitignore  .gitmodules  CMakeLists.txt  compile-shaders.sh
shaders/: default-solid.frag  default-solid.frag.spv  default.frag.spv  default.vert  default.vert.spv  frag.spv  phong-light-solid.frag  phong-light-solid.frag.spv  phong-light.frag  phong-light.frag.spv  phong-light.vert  phong-light.vert.spv  shader.frag  shader.vert  vert.spv
src/: buffer.cpp  buffer.hpp  camera.hpp  fs.cpp  fs.hpp  image.cpp  image.hpp  light.cpp  light.hpp  main.cpp  mesh.cpp  mesh.hpp  object.cpp  object.hpp  scene.hpp  sdl-display.cpp  sdl-display.hpp  texture.cpp  texture.hpp  vk-engine.cpp  vk-engine.hpp  vk-pipeline.cpp  vk-pipeline.hpp  vk-shader.cpp  vk-shader.hpp  vk-structs.hpp  vk-utils.cpp  vk-utils.hpp
